# inspicio

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: custom_llm_openai_compatible.yaml  deepseek_openai.yaml  local_harrier.yaml  local_jina.yaml  local_kalm.yaml  local_qwen_embedding.yaml  mistral_openai.yaml  openrouter_openai.yaml  retrieval_only_cohere.yaml
data/: PREMOVE.csv  input_inspicio.csv  input_italian.csv
inspicio/: __init__.py  config.py  embedders.py  evaluation.py  indexing.py  llm.py  pipeline.py  prompts.py  retriever.py  utils.py
notebooks/: build_index_colab.ipynb  run_pipeline_colab.ipynb
outputs/: README.md
scripts/: build_index.py  evaluate.py  run_pipeline.py
